# ecliptix-aura

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: promotion-gate.yml  rust.yml
AuraKit/: Package.swift
AuraKit/Sources/AuraKit/: AuraAnalyzer.swift
AuraKit/Sources/AuraKit/Internal/: AuraError.swift  FFIBridge.swift
AuraKit/Sources/AuraKit/Models/: ActionRecommendation.swift  AnalysisResult.swift  AuraConfig.swift  BatchItem.swift  ContactProfile.swift  ConversationSummary.swift  DetectionSignal.swift  MessageInput.swift
AuraKit/Sources/AuraKit/Types/: AccountType.swift  Action.swift  AlertPriority.swift  Confidence.swift  ConversationType.swift  DetectionLayer.swift  FollowUpAction.swift  ProtectionLevel.swift  ThreatType.swift
AuraKit/Tests/AuraKitTests/: AuraAnalyzerTests.swift  MemoryTests.swift  TypeDecodingTests.swift
AuraKit/include/: aura_ffi.h  module.modulemap
ci/: ffi_header_smoke.c  generate_dataset_evidence.py  generate_evidence_manifest.py  run_ffi_soak.py  run_promotion_rehearsal.py
crates/aura-core/: Cargo.toml
crates/aura-core/benches/: analyze_bench.rs
crates/aura-core/data/: action_policy_expectations.json  corpus_curated_cases.json  corpus_style_profiles.json  dataset_changelog.json  external_curated_chat_cases.json  realistic_chat_cases.json  social_context_cohorts.json
crates/aura-core/examples/: audit_evidence.rs  contract_evidence.rs  corpus_eval.rs  eval_metrics.rs  external_curated_eval.rs  manipulation_eval.rs  multilingual_eval.rs  noisy_eval.rs  policy_eval.rs  realistic_eval.rs  release_report.rs  robustness_eval.rs  scenario_eval.rs  simulations.rs  social_context_eval.rs
crates/aura-core/src/: action.rs  analyzer.rs  audit.rs  config.rs  error.rs  eval.rs  eval_corpus.rs  eval_external.rs  eval_policy.rs  eval_realistic.rs  eval_release.rs  eval_robustness.rs  eval_scenarios.rs  eval_social_context.rs  lib.rs  types.rs
crates/aura-core/src/context/: bullying.rs  coercion.rs  contact.rs  enricher.rs  events.rs  grooming.rs  manipulation.rs  mod.rs  raid.rs  selfharm.rs  timing.rs  tracker.rs
crates/aura-ffi/: Cargo.toml
crates/aura-ffi/src/: lib.rs
crates/aura-ml/: Cargo.toml
crates/aura-ml/src/: backend.rs  boundary.rs  lib.rs  pipeline.rs  sentiment.rs  tokenizer.rs  toxicity.rs  types.rs
crates/aura-ml/tests/: onnx_integration.rs
crates/aura-patterns/: Cargo.toml
crates/aura-patterns/data/: patterns_mvp.json
crates/aura-patterns/src/: database.rs  emoji.rs  lib.rs  matcher.rs  normalizer.rs  url_checker.rs
crates/aura-proto/: Cargo.toml  build.rs
crates/aura-proto/examples/: generate_compat_fixtures.rs
crates/aura-proto/src/: compat_fixtures.rs  lib.rs
crates/aura-proto/tests/: compat_fixtures.rs
crates/aura-proto/tests/fixtures/: analysis_result.pb  batch_analyze_response.pb  tracker_state.pb
docs/: README.md  dataset-governance.md  incidents-and-rollbacks.md  messenger-psychology-research-spec.md  phase-2-production-roadmap.md  pig-butchering-scam-research.md  privacy-audit-policy.md  proto-abi-stability.md  release-criteria.md
include/: aura_ffi.h
models/: .gitignore
proto/aura/messenger/v1/: messenger.proto
scripts/: build-xcframework.sh  download_models.py
