[package]
name = "aura-core"
version.workspace = true
edition.workspace = true
description = "Core analysis engine for AURA protection system"

[dependencies]
aura-patterns = { path = "../aura-patterns" }
aura-ml = { path = "../aura-ml" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
aho-corasick = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analyze"
path = "benches/analyze_bench.rs"
harness = false
